fix slideshow on all devices. disable auto-rotation on mobile

--- a/el/css/main.css
+++ b/el/css/main.css
@@ -2408,10 +2408,6 @@ main {
     font-size: 40px;
     line-height: 40px;
   }
-  .header .slider .slide-2,
-  .header .slider .slide-3 {
-    display: none;
-  }
   .header .slider-controls {
     display: none;
   }
