--- a/en/scss/mobile.scss
+++ b/en/scss/mobile.scss
@@ -51,14 +51,6 @@
       }
     }
 
-    .slider {
-
-      .slide-2,
-      .slide-3 {
-        display: none;
-      }
-    }
-
     .slider-controls {
       display: none;
     }
